# blob

./: .gitignore  CMakeLists.txt  level.txt
.qtcreator/: CMakeLists.txt.user.291619d
data/: backhigh.csv  backlow.csv  backmid.csv  ball.col  ball.pos  blobblue.col  blobblue.pos  blobred.col  blobred.pos  bottomhigh.csv  bottomlow.csv  flatwithtunnel.blend  fronthigh.csv  frontlow.csv  frontmid.csv  lefthigh.csv  leftlow.csv  leftmid.csv  level.txt  m.col  m.csv  m.pos  righthigh.csv  rightlow.csv  rightmid.csv  tophigh.csv  toplow.csv  topmid.csv  tunnelhigh.csv  tunnellow.csv  tunnelmid.csv
data/blender/: ccw.py  export.py
data/levels/: level.txt  level0.txt  level1.txt
data/meshes/: backhigh.csv  backlow.csv  backmid.csv  bottomlow.csv  bottommid.csv  fronthigh.csv  frontlow.csv  frontmid.csv  lefthigh.csv  leftlow.csv  leftmid.csv  righthigh.csv  rightlow.csv  rightmid.csv  ship.csv  tophigh.csv  toplow.csv  topmid.csv  tunnelhigh.csv  tunnellow.csv  tunnelmid.csv
source/: cell.hpp  csv.hpp  ffm.hpp  ffp.hpp  ffr.hpp  level.hpp  mesh.hpp  meshes.hpp  player.hpp  renderer.hpp  strtonum.hpp  util.hpp
source/platform/gba/: Makefile  gba.gba
source/platform/gba/source/: main.cpp  main.iwram.cpp
source/platform/sdl/source/: main.cpp
